<resources>
    <string name="app_name">TUNE</string>
    <string name="label_linear_acc">LinearAcc:</string>
    <string name="placeholder">placeholder</string>
    <string name="label_distance">distance</string>
    <string name="label_speed">speed</string>
    <string name="label_sample_rate">Sample Rate</string>
    <string name="label_mag">magnetic</string>
    <string name="label_step">Step</string>
    <string name="label_step_detector">Step by Detector</string>
    <string name="label_rotation">Rotation</string>
    <string name="label_angular">Angular speed</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_home">Home</string>
    <string name="action_task">Task</string>
    <string name="action_history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Hi, Guest</string>
    <string name="slogan">Let\'s Train !</string>
    <string name="description">Here\'re recommendations for you</string>
    <string name="more">More Games ▶</string>
    <string name="task_description_1">Life is not easy for any of us. We must work, and above all we must believe in ourselves. We must believe that each of us is able to do something well and that.</string>
    <string name="title_activity_result">ResultActivity</string>
</resources>
